--- a/GameDx12/GameDx12.vcxproj.filters
+++ b/GameDx12/GameDx12.vcxproj.filters
@@ -24,12 +24,21 @@
     <ClCompile Include="window.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="window_impl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="graphics.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="interface.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="pch.h">
+    <ClInclude Include="core.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
